# NicLink

./: .gitignore  .gitmodules  7  99-chessclock.rules.example  99-chessnutair.rules.example  API_DOCUMENTATION.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  NicLink.cpp  README.md  activate  clean.sh  compile_comand  example.rules  external_timer  fix_permissions_linux  fix_permissions_linux.md  game_state_examples.txt  lichess  lightsout.sh  niclink.pth_example  pyLink.py  pyenv_up.sh  pyvenv_up.sh  requirements.txt  runLichess.sh  run_lichess.sh  setupNicLink.sh  testNicLink.sh  things_learned.md  updateNicLink.sh  updatePip.sh
.github/workflows/: python-app.yml
NicLink/: __init__.py  __main__.py
NicLink-lichess/: NicLink_lila.py  _cnut-lila.template  cnut-lila.py
NicLink-lichess/lichess_token/: token
arduino_chess_clock/chess_clock/: chess_clock.ino
chess_clock/: chess_clock.ino
external_clock/: chess_clock  chess_clock.py  sending_messages.py
external_clock_firmware/QT-Py/chess_clock/: sketch.yaml
external_clock_firmware/WROOM_chess_clock/chess_clock/: chess_clock.ino  sketch.yaml
external_clock_firmware/arduino_chess_clock/chess_clock/: chess_clock.ino
lichess_token/: god_token
nic_soft/: README.md  __main__.py  pyproject.toml  requirements.txt  test_niclink.py  test_niclink_lights.py  test_niclink_move_parsing.py  turn_out_all_lights.py
nic_soft/bluetooth/: README.md
nic_soft/lichess_NicLink/: __main__.py
nic_soft/nic_soft.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
nic_soft/niclink/: __init__.py  __main__.py  niclink.py  nl_bt_test.py  nl_exceptions.py  nl_test_bluetooth.py  test_niclink.py
nic_soft/niclink/bluetooth/: __main__.py  main.py  niclink_bluetooth.py
nic_soft/niclink/nl_bluetooth/: __init__.py  __main__.py  constants.py  discovery.py  main.py
nic_soft/niclink_game/: README.md  __main__.py
nic_soft/niclink_lichess/: __main__.py
nic_soft/play_stockfish/: README.md  __main__.py
nic_soft/test/: __main__.py  nl_test_threading.py  test_niclink_FEN.py  test_niclink_board_compairison.py  test_niclink_lights.py  test_niclink_move_parsing.py
nic_soft/token_manager/: token_manager_model.py  token_manager_presenter.py
nicsoft/: LICENSE  __init__.py  __main__.py  activate_pyvenv.sh  light_board.py  pyproject.toml  pyvenv.cfg  requirements.txt  source_pyvenv.sh  source_pyvenv.zsh  turn_out_all_lights.py
nicsoft/external_timer/: __init__.py  chess_clock.py  lcd_timer.py
nicsoft/lichess/: __init__.py  __main__.py  chess_clock.py  game.py  game_start.py  game_state.py  game_state_examples.txt  lila.py  stream_examples.txt
nicsoft/lichess/external_clock_firmware/QT-Py/chess_clock/: chess_clock.ino
nicsoft/lichess/external_clock_firmware/arduino_chess_clock/chess_clock/: chess_clock.ino
nicsoft/lichess/external_clock_firmware/old/: chess_clock.py
nicsoft/lichess/external_clock_firmware/serial_chess_clock/: serial_chess_clock.ino
nicsoft/lichess/external_timer/: lcd_display.py  sending_messages.py
nicsoft/lichess/external_timer/old/: talking_to_aurdino.py
nicsoft/lichess_NicLink/: __main__.py
nicsoft/niclink/: __init__.py  __main__.py  driver.py  niclink.py  nl_exceptions.py  nl_test_bluetooth.py
nicsoft/niclink/nl_bluetooth/: README.md  __init__.py  constants.py  discovery.py  main.py
nicsoft/niclink_game/: __main__.py
nicsoft/nicsoft.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
nicsoft/play_stockfish/: README.md  __main__.py
nicsoft/test/: __main__.py  nl_test_threading.py  test_960.py  test_niclink_FEN.py  test_niclink_board_compairison.py  test_niclink_lights.py  test_niclink_move_parsing.py  test_niclink_signals.py
nicsoft/uno_timer/: __init__.py  chess_clock.py  test.py  test2.py
pip_package/: package.sh
pip_package/NicLink/: py_supervisor.py
src/: CMakeLists (1).txt  CMakeLists.txt  EasyLink.h  NicLink.cpp  NicLink_bluetooth.cpp  easy_link_c.cpp  nonTestCmakeLists.txt  pyLink.py  testNicLink.cpp
