#  nic_soft is free software: you can redistribute it and/or modify it under the terms of the gnu general public license as published by the free software foundation, either version 3 of the license, or (at your option) any later version.
#
#  nic_soft is distributed in the hope that it will be useful, but without any warranty; without even the implied warranty of merchantability or fitness for a particular purpose. see the gnu general public license for more details.
#
#  you should have received a copy of the gnu general public license along with nic_soft. if not, see <https://www.gnu.org/licenses/>.

[build-system]
requires = ["setuptools"]

[tool.setuptools.packages]
find = {} # defaults

[project]
version = '0.7.0'

name = "nic_soft"
authors = [
    {name = "Nicolas Vaagen", emal="nicolasvaagen@gmail.com"},
]
description = 'A package containing NicLink and associated software. NicLink is a "driver" for chessnut air boards.'
# packages = 
install_requires=['chess', 'pybind11']
dependencies=[
    "pyfirmata",
    "berserk==0.13.2",
    "chess==1.10.0",
    "prompt_toolkit==3.0.39",
    "readchar==4.0.5",
    "stockfish==3.28.0",
    "async-timeout==4.0.2",
    "asyncio==3.4.3",
    "bleak",
    "dbus-fast==1.83.1",
    "pybind11",
    "pyfirmata",
    "pyserial",
]
keywords=["Chessnut", "Chessnut air", "e-board", "EasyLinkSDK", "chess", "lichess", "boardAPI"]
classifiers= [
    "Development Status :: in progress",
    "Intended Audience :: Chessnut air owners",
    "Programming language :: Python :: 3.12+",
    "Programming language :: C++",
    "Operating System :: POSIX :: GNU/Linux",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows", # untested
    "Operating System :: MacOS :: MacOS X", # untested
    "Topic :: chess"
]
readme = "README.md"
license = {file = "LICENSE"}

[project.urls]
Repository = 'https://github.com/nicvagn/NicLink'
'Bug Reports' = 'https://github.com/nicvagn/NicLink/issues'

