#  nic_soft is free software: you can redistribute it and/or modify it under the terms of the gnu general public license as published by the free software foundation, either version 3 of the license, or (at your option) any later version.
#
#  nic_soft is distributed in the hope that it will be useful, but without any warranty; without even the implied warranty of merchantability or fitness for a particular purpose. see the gnu general public license for more details.
#
#  you should have received a copy of the gnu general public license along with nic_soft. if not, see <https://www.gnu.org/licenses/>.

[build-system]
requires = [
    "setuptools>=42",
    "pybind11>=2.10.0",
]
build-backend = "setuptools.build_meta"

[project]
name="nicsoft"
version="1.1.0"
authors=[
    { name = "Nicolas Vaagen", email="nicolasvaagen@gmail.com" }
]
maintaners= [
    { name = "Nicolas Vaagen", email="nicolasvaagen@gmail.com" }
]
description='A package containing NicLink and associated software. NicLink is a "driver" for chessnut air boards.'
keywords=["Chessnut", "Chessnut air", "e-board", "EasyLinkSDK", "chess", "lichess", "boardAPI"]
classifiers= [
    "Development Status :: ongoing",
    "Intended Audience :: Chessnut air owners",
    "Programming language :: Python :: 3.12+",
    "Programming language :: C++",
    "Operating System :: POSIX :: GNU/Linux",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows", # untested
    "Operating System :: MacOS :: MacOS X", # untested
    "Topic :: chess"
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = "==3.12.3"

[project.urls]
Repository = 'https://github.com/nicvagn/NicLink'
issues = 'https://github.com/nicvagn/NicLink/issues'

[tool.setuptools.packages]
find = {} # defaults

